tests/compile_fail/token_aliasing.stderr
error[E0080]: index out of bounds: the length is 1 but the index is 1
 --> tests/compile_fail/token_aliasing.rs:8:1
  |
8 | #[arcane]
  | ^^^^^^^^^ evaluation of `evil::_` failed here
  |
  = note: this error originates in the attribute macro `arcane` (in Nightly builds, run with -Z macro-backtrace for more info)

warning: unused variable: `token`
 --> tests/compile_fail/token_aliasing.rs:9:9
  |
9 | fn evil(token: X64V3Token, data: &[f32; 8]) -> f32 {
  |         ^^^^^ help: if this is intentional, prefix it with an underscore: `_token`
  |
  = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default
